manifests/bookreview-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookreview-ingress
  namespace: bookreview
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: bookreview.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
